hoàn thiện customer contract API